# holoclaw-acp

./: .gitignore  BRIDGE_INTEGRATION.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  README_HOLOCHAIN.md  SECURITY.md  TESTING.md  build.sh  package.json
bridge/: holoclaw_plugin.ts
dnas/holoclaw_acp/: dna.yaml
test/: test_zome_calls.ts
zomes/coordinator/acp_coordinator/: Cargo.toml
zomes/coordinator/acp_coordinator/src/: lib.rs
zomes/integrity/acp_integrity/: Cargo.toml
zomes/integrity/acp_integrity/src/: lib.rs
