[workspace]
resolver = "2"
members = [
  "zomes/integrity/acp_integrity",
  "zomes/coordinator/acp_coordinator",
]

[workspace.dependencies]
hdk = "0.6.1-rc.0"
serde = { version = "1.0", features = ["derive"] }
ethers = { version = "2.0", features = ["legacy"] }
tokio = { version = "1.35", features = ["full"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
overflow-checks = true
